--- a/待處理.md
+++ b/待處理.md
@@ -29,14 +29,15 @@ APT（Advanced Persistent Threats）
 BEC 商業電子郵件詐騙
 Tor路由
 
-誘捕系統
+# 誘捕系統
+```
 1.Honeypot 蜜罐
 2.Honeywall
 3.Honeynet
+```
 
-
-死結(deadlock)的四個條件是：
-
+# 死結(deadlock)的四個條件是：
+```
 禁止搶占 no preemption - 系統資源不能被強制從一個行程中登出
 持有和等待 hold and wait - 一個行程可以在等待時持有系統資源
 互斥 mutual exclusion - 只有一個行程能持有一個資源
@@ -44,16 +45,16 @@ Tor路由
 
 死結只有在這四個條件同時滿足時出現。
 預防死結就是至少破壞這四個條件其中一項，即破壞「禁止搶占」、破壞「持有等待」、破壞「資源互斥」和破壞「迴圈等待」。
+```
 
 
 
-
-Snort可以三個模式進行運作：
-
+# Snort可以三個模式進行運作：
+```
 偵測模式（Sniffer Mode）：此模式下，Snort將在現有的網域內擷取封包，並顯示在螢幕上。
 封包紀錄模式（packet logger mode）：此模式下，Snort將已擷取的封包存入儲存媒體中（如硬碟）。
 上線模式（inline mode）：此模式下，Snort可對擷取到的封包做分析的動作，並根據一定的規則來判斷是否有網路攻擊行為的出現。
-
+```
 
 https://zh.wikipedia.org/wiki/Perl
 https://zh.wikibooks.org/zh-tw/Lua
