--- a/待處理.md
+++ b/待處理.md
@@ -38,10 +38,10 @@ Tor路由
 
 # 死結(deadlock)的四個條件是：
 ```
-禁止搶占 no preemption - 系統資源不能被強制從一個行程中登出
-持有和等待 hold and wait - 一個行程可以在等待時持有系統資源
-互斥 mutual exclusion - 只有一個行程能持有一個資源
-迴圈等待 circular waiting - 一系列行程互相持有其他行程所需要的資源
+1.禁止搶占 no preemption - 系統資源不能被強制從一個行程中登出
+2.持有和等待 hold and wait - 一個行程可以在等待時持有系統資源
+3.互斥 mutual exclusion - 只有一個行程能持有一個資源
+4.迴圈等待 circular waiting - 一系列行程互相持有其他行程所需要的資源
 
 死結只有在這四個條件同時滿足時出現。
 預防死結就是至少破壞這四個條件其中一項，即破壞「禁止搶占」、破壞「持有等待」、破壞「資源互斥」和破壞「迴圈等待」。
