--- a/待處理.md
+++ b/待處理.md
@@ -10,7 +10,7 @@ NAT（Network Address Translation）
 PAT(Port Address Translation)
 NPAT(Network Port Access Transportation)
 
-nmap 指令
+nmap 指令 黑箱測試 白箱測試 灰箱測試
 
 DMZ網段
 緩衝區溢位（buffer overflow）
