--- a/待處理.md
+++ b/待處理.md
@@ -12,6 +12,8 @@ NPAT(Network Port Access Transportation)
 
 nmap 指令 黑箱測試 白箱測試 灰箱測試
 
+LDAP injection https://en.wikipedia.org/wiki/LDAP_injection
+
 DMZ網段
 緩衝區溢位（buffer overflow）
 第二層隧道協定（英語：Layer Two Tunneling Protocol，縮寫為L2TP)
